--- a/frontend/src/components/Cards.css
+++ b/frontend/src/components/Cards.css
@@ -9,11 +9,11 @@
 .card{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 40px 270px 70px 1fr 100px;
+    grid-template-rows: 40px 270px 160px 110px 100px;
     grid-template-areas: 'title' 'img' 'text' 'obs' 'input' ;
     text-align: center;
     width: 300px;
-    height: 650px;
+    height: 680px;
     background-color: #f4f4f4;
     padding: 5px 10px;
     margin: 15px;
@@ -117,7 +117,7 @@
 }
 
 .card .obs{
-    background-color: #E6E6E6;
+    /* background-color: #E6E6E6; */
     margin: 10px 0;
     display: flex;
     align-items: baseline;
